@@ -5,6 +5,7 @@ freeipa (4.8.4-1) UNRELEASED; urgency=medium
   * Fix-font-awesome-path.patch: Dropped, upstream.
   * Use debhelper-compat.
   * Add debian/gitlab-ci.yml.
+    - allow blhc and piuparts to fail
 
  -- Timo Aaltonen <tjaalton@debian.org>  Thu, 28 Nov 2019 15:07:31 +0200
 
